// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkAsWatched handles not logged in users 1`] = `
Object {
  "data": Object {
    "markAsWatched": Object {
      "episode": null,
      "success": false,
    },
  },
}
`;

exports[`MarkAsWatched marks episode as watched 1`] = `
Object {
  "data": Object {
    "markAsWatched": Object {
      "episode": Object {
        "id": "RXBpc29kZTo2",
      },
      "success": true,
    },
  },
}
`;
